Changes to content of webpage

--- a/first-site/index.html
+++ b/first-site/index.html
@@ -6,6 +6,6 @@
 	<title>Web Developement Course</title>
 </head>
 <body>
-	<h1>This is html,css,javascript for web developers</h1>
+	<h1>This is html,css,javascript for web developers. That's enjoyable.</h1>
 </body>
 </html>
